--- a/public/movie/css/responsive.css
+++ b/public/movie/css/responsive.css
@@ -114,7 +114,7 @@
 
     .city-map-js {
         position: relative;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         justify-content: flex-start;
         overflow-y: auto;
     }
@@ -124,7 +124,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 0.4rem;
+        padding: 0.2rem 0.4rem;
     }
 
     .city-map-js .city-link {
@@ -148,8 +148,17 @@
         display: flex;
     }
 
+    .desk-sy {
+        display: none;
+    }
+
     .map {
-        top: -225px;
+        top: -343px;
+    }
+
+    .map {
+        min-height: auto;
+        height: 45vh;
     }
 
     .get-ticket-btn {
@@ -162,6 +171,7 @@
         top: 61px;
         width: 28px;
     }
+
 }
 
 /*Small devices (landscape phones, 576px and up)*/
