--- a/public/movie/css/movie.css
+++ b/public/movie/css/movie.css
@@ -62,6 +62,25 @@ img {
     cursor: pointer;
 }
 
+.iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+}
+
+.iframe-container iframe {
+    border: 0;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.iframe-container-4x3 {
+    padding-top: 75%;
+}
+
 .movie-header {
     background: var(--secondary-light);
 }
