--- a/public/movie/css/movie.css
+++ b/public/movie/css/movie.css
@@ -63,22 +63,18 @@ img {
 }
 
 .iframe-container {
-    overflow: hidden;
-    padding-top: 56.25%;
     position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
 }
 
-.iframe-container iframe {
-    border: 0;
-    left: 0;
+.iframe-video {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-}
-
-.iframe-container-4x3 {
-    padding-top: 75%;
+    border: 0;
 }
 
 .movie-header {
@@ -268,9 +264,10 @@ img {
 
 .map {
     position: absolute;
-    width: 100%;
+    width: calc(100% - 15px);
     min-height: 80vh;
     height: auto;
+    left: 15px;
     top: 0;
     right: 0;
     bottom: 0;
