--- a/public/movie/css/movie.css
+++ b/public/movie/css/movie.css
@@ -504,19 +504,19 @@ img {
 }
 
 .footer-social img {
-    width: 65px;
+    width: 35px;
 }
 
 .footer-dist-logos {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     padding: 2rem 0;
 }
 
 
 .footer-dist-logos img {
-    width: 300px;
+    width: 150px;
     margin: 0 1rem;
     filter: grayscale(100%);
     transition: all .2s;
